# homework16

./: .travis.yml  CMakeLists.txt  classificator.cpp  clusterizator.cpp  common.h
